--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^22.13.11"
+    "@types/node": "^22.13.11",
+    "canvas": "^3.1.0",
+    "express": "^5.1.0",
+    "mineflayer": "^4.27.0",
+    "prismarine-viewer": "^1.33.0"
   }
 }
