--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@types/node": "^22.13.11",
     "canvas": "^3.1.0",
+    "chalk": "^5.4.1",
     "express": "^5.1.0",
+    "minecraft-protocol": "^1.57.0",
     "mineflayer": "^4.27.0",
     "prismarine-viewer": "^1.33.0"
   }
